# deploy

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  Cargo.toml  README.md  compose.yml  go.mod  justfile  readme.md  roadmap.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build-images.yml  ci.yml  pr-builds.yml  release-binaries.yml
client/core/rs/: Cargo.toml  README.md
client/core/ts/: README.md  package.json
client/periphery/rs/: Cargo.toml
cmd/luddite-agent/: main.go
cmd/luddite-master/: main.go
config/: periphery.config.toml
docs/: architecture.md  forking.md  running.md
docs/compose/plans/: 2026-06-19-control-plane-implementation.md  (+6 more)
example/alerter/: Dockerfile  README.md
example/update_logger/: Dockerfile
internal/control/: types.go
internal/envutil/: envutil.go  envutil_test.go
lib/command/: Cargo.toml  README.md
lib/formatting/: README.md
lib/git/: README.md
lib/transport/: Cargo.toml
lib/transport/src/: channel.rs  lib.rs
lib/transport/src/iroh/: endpoint.rs  framing.rs  mod.rs  secret.rs
rust/iroh-bridge/: Cargo.toml
rust/iroh-bridge/examples/: direct_control.rs  direct_ping.rs
rust/iroh-bridge/src/: http.rs  lib.rs  main.rs  messages.rs  network.rs  state.rs
rust/iroh-bridge/tests/: http_smoke.rs  iroh_loopback.rs
scripts/: readme.md
tests/integration/: README.md  config.example.toml  conftest.py  pyproject.toml  test_backup.py  test_migration.py  test_placement.py
ui/: README.md  package-lock.json  package.json
ui/src/: router.tsx
(+138 files in other folders)
