[package]
name = "transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
periphery_client.workspace = true
encoding.workspace = true
#
mogh_error.workspace = true
#
iroh.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
rand.workspace = true
uuid.workspace = true
